--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng8-wyy": {
+    "ng9-wyy": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng8-wyy",
+            "outputPath": "dist/ng9-wyy",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -93,18 +93,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng8-wyy:build"
+            "browserTarget": "ng9-wyy:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng8-wyy:build:production"
+              "browserTarget": "ng9-wyy:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng8-wyy:build"
+            "browserTarget": "ng9-wyy:build"
           }
         },
         "test": {
@@ -141,16 +141,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng8-wyy:serve"
+            "devServerTarget": "ng9-wyy:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng8-wyy:serve:production"
+              "devServerTarget": "ng9-wyy:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "ng8-wyy"
+  "defaultProject": "ng9-wyy",
+  "cli": {
+    "analytics": false
+  }
 }
