--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.7",
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
+    "@better-scroll/core": "^2.0.0-beta.10",
+    "@better-scroll/mouse-wheel": "^2.0.0-beta.10",
+    "@better-scroll/scroll-bar": "^2.0.0-beta.10",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
     "minireset.css": "0.0.6",
